# wasm-cel

./: .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/benches/: bench_interpreter.rs
crate/src/: cel.pest  interpreter.rs  lib.rs  methods.rs  model.rs  ordering.rs  parser.rs  stack.rs
crate/src/stack/: runtime.rs  walker.rs
js/: index.js
