[package]
authors = ["Ryan Brewster"]
description = "Rust crate for compiling CEL"
edition = "2018"
name = "wasm-cel"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "^2.0"
pest_derive = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = "0.2.25"
