[package]
authors = ["Ryan Brewster"]
description = "Rust crate for compiling CEL"
edition = "2018"
name = "wasm-cel"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "^2.0"
pest_derive = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }

[dev-dependencies]
criterion = "^0.2"

[[bench]]
name = "bench_interpreter"
harness = false

